<resources>
    <string name="app_name">Answer Me</string>
    <string name="my_post">My Post</string>
    <string name="feeds">Feeds</string>
    <string name="setting">Setting</string>
    <string name="new_post">New Post</string>
    <string name="choose_genre">Choose Genre</string>
    <string name="music">Music</string>
    <string name="film_series">Film/Series</string>
    <string name="new_title">Post Title</string>
    <string name="question">Question</string>

    <string name="question1">Question 1</string>
    <string name="question2">Question 2</string>
    <string name="question3">Question 3</string>
    <string name="game">Game</string>
    <string name="info">Info</string>
    <string name="study">Study</string>
    <string name="username">Username</string>

    <string name="success_message">Success</string>
    <string name="failed_message">%s</string>
    <string name="save_profile">Save Profile</string>
    <string name="post_it">Post It!</string>
    <string name="you_have_not_post_a_question">You Have Not Post a Question.</string>
    <string name="by">by</string>
    <string name="middle_dot">•</string>
    <string name="create_a_new_post">Create a New Post</string>
    <string name="comment">Comment</string>
    <string name="cannot_find_the_question">Cannot Find The Question.</string>
    <string name="post">Post!</string>
    <string name="people_not_comment_on_this_question_yet">People Not Comment\nOn This Question Yet.</string>
    <string name="there_is_no_post">There Is no Post.</string>
    <string name="title_can_t_be_more_than_20_character">Title Can\'t Be More Than 15 Character.</string>
    <string name="question_can_t_be_more_than_150_character">Question Can\'t Be More Than 150 Character.</string>
    <string name="get_a_new_comment">Get a New Comment</string>
    <string name="get_a_new_comment_from_s">Get a new comment from %s.</string>
    <string name="new_comment_on">New Comment On %1$s</string>
    <string name="tlu_three_letter_username">TLU! Three Letter Username!</string>

    <string name="first_slide_onboarding">First, I do warn you, this a a hostile place. But we are welcome you! Feel Free to speak about anything.</string>
    <string name="second_slide_onboarding">We do not record anything, yet. We want to make a place for people to talk about anything!</string>
    <string name="third_slide_onboarding">Enjoy your time, if you can\'t, give me a feedback, or just quit the app.</string>
    <string name="fun">Fun</string>

</resources>