<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/feedsFragment">

    <fragment
        android:id="@+id/feedsFragment"
        android:name="org.d3if3038.answerme.ui.feeds.FeedsFragment"
        android:label="@string/feeds"
        tools:layout="@layout/fragment_feeds">
        <action
            android:id="@+id/action_feedsFragment_to_createPostFragment"
            app:destination="@id/createPostFragment" />
        <action
            android:id="@+id/action_feedsFragment_to_commentFragment"
            app:destination="@id/commentFragment" />
    </fragment>

    <fragment
        android:id="@+id/settingFragment"
        android:name="org.d3if3038.answerme.ui.setting.SettingFragment"
        android:label="@string/setting"
        tools:layout="@layout/fragment_setting"/>

    <fragment
        android:id="@+id/myPostFragment"
        android:name="org.d3if3038.answerme.ui.myquestion.MyQuestionFragment"
        android:label="@string/my_post"
        tools:layout="@layout/fragment_my_question">
        <action
            android:id="@+id/action_myPostFragment_to_commentFragment"
            app:destination="@id/commentFragment" />
    </fragment>

    <fragment
        android:id="@+id/createPostFragment"
        android:name="org.d3if3038.answerme.ui.createquestion.CreateQuestionFragment"
        android:label="@string/create_a_new_post"
        tools:layout="@layout/fragment_create_question"/>

    <action
        android:id="@+id/to_commentFragment"
        app:destination="@id/commentFragment"/>

    <fragment
        android:id="@+id/commentFragment"
        android:name="org.d3if3038.answerme.ui.comment.CommentFragment"
        android:label="@string/comment"
        tools:layout="@layout/fragment_comment">
        <argument
            android:name="documentId"
            app:argType="string" />
    </fragment>

</navigation>