<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:transitionName="shared_element_container"
    android:id="@+id/createQuestionActivity"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="?attr/colorPrimaryVariant"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/topBar"
        layout="@layout/title_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:background="@drawable/round_top"
        android:paddingTop="32dp"
        android:paddingHorizontal="25dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_height="0dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/choose_genre" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:scrollbars="none"
            android:layout_height="wrap_content">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroup"
                app:singleLine="true"
                android:layout_marginBottom="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipFun"
                    style="@style/Widget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/fun"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipMusic"
                    style="@style/Widget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/music"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipFilm"
                    style="@style/Widget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/film_series"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipGame"
                    style="@style/Widget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/game"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipInfo"
                    style="@style/Widget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/info"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipStudy"
                    style="@style/Widget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/study"/>


            </com.google.android.material.chip.ChipGroup>

        </HorizontalScrollView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/titleInputHint"
            android:layout_marginBottom="16dp"
            app:counterEnabled="true"
            app:counterMaxLength="15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/titleTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_title"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/questionInputHint"
            android:layout_marginBottom="16dp"
            app:counterEnabled="true"
            app:counterMaxLength="150"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/questionTextInput"
                android:gravity="top"
                android:minLines="4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/question"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/postButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/post_it"
            android:layout_gravity="end"/>


    </LinearLayout>

</LinearLayout>