<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?attr/colorPrimaryVariant"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <include
        android:id="@+id/topBar"
        layout="@layout/title_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingTop="32dp"
        android:paddingHorizontal="25dp"
        android:background="@drawable/round_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topBar"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/refreshButton"
            style="@style/Widget.Material3.Button.ElevatedButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/baseline_refresh_24"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/new_post"/>

        <HorizontalScrollView
            android:id="@+id/chipGroupLayout"
            android:scrollbars="none"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipFun"
                    style="@style/Widget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    app:chipIcon="@drawable/baseline_filter_vintage_24"
                    app:checkedIconEnabled="false"
                    app:chipIconVisible="true"
                    android:text="@string/fun"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipMusic"
                    style="@style/Widget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    app:chipIcon="@drawable/baseline_music_note_24"
                    app:checkedIconEnabled="false"
                    app:chipIconVisible="true"
                    android:text="@string/music"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipFilm"
                    style="@style/Widget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:chipIcon="@drawable/baseline_local_movies_24"
                    app:chipIconVisible="true"
                    app:checkedIconEnabled="false"
                    android:checked="false"
                    android:text="@string/film_series"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipGame"
                    style="@style/Widget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:chipIcon="@drawable/baseline_videogame_asset_24"
                    app:chipIconVisible="true"
                    android:checked="false"
                    app:checkedIconEnabled="false"
                    android:text="@string/game"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipInfo"
                    style="@style/Widget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:chipIcon="@drawable/baseline_info_24"
                    app:chipIconVisible="true"
                    android:checked="false"
                    app:checkedIconEnabled="false"
                    android:text="@string/info"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipStudy"
                    style="@style/Widget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:chipIcon="@drawable/baseline_draw_24"
                    app:chipIconVisible="true"
                    android:checked="false"
                    app:checkedIconEnabled="false"
                    android:text="@string/study"/>

            </com.google.android.material.chip.ChipGroup>

        </HorizontalScrollView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/myPostRecycleView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/chipGroupLayout"
                tools:listitem="@layout/post_item" />

            <TextView
                android:id="@+id/emptyView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/there_is_no_post"
                android:textStyle="bold"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/chipGroupLayout" />

            <ProgressBar
                android:id="@+id/progress_circular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/chipGroupLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fabNewPost"
        android:transitionName="shared_element_container"
        android:layout_margin="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:text="@string/new_post"
        app:icon="@drawable/twotone_loupe_24"
        style="?attr/floatingActionButtonSmallStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>